failures/clang_other_error_lZl8Hg.i.stderr.txt
src/network/networkd-ndisc.c:454:30: error: fields must have a constant size: 'variable length array in structure' extension will never be supported
                        char domain[strlen(*i)];
                             ^
1 error generated.
